--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "ext-bcmath": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "symfony/asset": "7.4",
+        "symfony/asset-mapper": "7.4",
         "symfony/console": "*",
         "symfony/dotenv": "*",
         "symfony/expression-language": "*",
@@ -17,6 +19,7 @@
         "symfony/runtime": "*",
         "symfony/twig-bundle": "*",
         "symfony/yaml": "*",
+        "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "*"
     },
     "require-dev": {
@@ -61,7 +64,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "importmap:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
