--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,7 @@ services:
         bind:
             $fileDir: '%kernel.project_dir%/public/Files/'
             $cookie: '%env(file:AUTH_FILE)%'
+            $leaderboards: '%env(json:LEADERBOARDS)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
